Clear background on unread items (fix). It would break visibility if theme color is dark.

--- a/templates/@theme-base/_styles.scss
+++ b/templates/@theme-base/_styles.scss
@@ -79,7 +79,7 @@ $boxshadow-main: none;
 
   &.item-container {
     &:not(.item-is-selected):not(.item-contact):not(.read):not(.active) {
-      
+      background: $color-standard-text;
     }
   }
 
